--- a/app/views/base.html
+++ b/app/views/base.html
@@ -37,19 +37,19 @@
 
                 <div class="collapse navbar-collapse" id="navigation">
                     <ul class="nav navbar-nav">
-                        <li><a href="aiheet">Aiheet</a></li>
+                        <li><a href="{{base_path}}/aiheet">Aiheet</a></li>
                     </ul>
                     <ul class="nav navbar-nav">
-                        <li><a href="kurssit">Kurssit</a></li>
+                        <li><a href="{{base_path}}/kurssit">Kurssit</a></li>
                     </ul>
                     <ul class="nav navbar-nav">
-                        <li><a href="kurssit_kv">Kurssit, ope-mode</a></li>
+                        <li><a href="{{base_path}}/kurssit_kv">Kurssit, ope-mode</a></li>
                     </ul>
                     <ul class="nav navbar-nav">
-                        <li><a href="kurssi/1">Tsoha</a></li>
+                        <li><a href="{{base_path}}/kurssi/1">Tsoha</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="login">Kirjaudu sisään</a></li>
+                        <li><a href="{{base_path}}/login">Kirjaudu sisään</a></li>
                     </ul>
                 </div>
             </div>
