--- a/app/views/aiheet.html
+++ b/app/views/aiheet.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>Briiffi</h1>
 <h2>Valitse aihe</h2>
-<button class="btn btn-primary">Tietojenkäsittelytiede</button>
-<button class="btn btn-primary">Matematiikka</button>
-<button class="btn btn-primary">yms.</button>
+{% for aihe in aiheet %}
+<a class="btn btn-primary" href="{{base_path}}/kurssit/{{aihe.id}}">{{aihe.nimi}}</a>
+{% endfor %}
 {% endblock %}
