--- a/app/views/kurssilista_kv.html
+++ b/app/views/kurssilista_kv.html
@@ -1,40 +1,54 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Briiffi</h1>
-<h2>Kurssit (Kurssivastaava näkymä)</h2>
+<h2>Kurssit</h2>
+
+{% if errors %}
+<div class="alert alert-danger">
+    <ul>
+        {% for error in errors %}
+        <li>{{error}}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
+
 <table class="table table-bordered table-striped">
- <!--   <thead>
-        <tr>
-            <th>Nimi</th>
-            <th>Taulukko</th>
-        </tr>
-    </thead>-->
     <tbody>
+        {% for kurssi in kurssit %}
         <tr>
-            <td>Ohjelmoinnin jatkokurssi</td>
-            <td><button class="btn btn-primary">Avaa</button></td>
-            <td></td>
+            {% if kurssi.julkaistu %}
+                <td>{{kurssi.nimi}}</td>
+                <td><a class="btn btn-primary" href="{{base_path}}/kurssi/{{kurssi.id}}">Avaa</a></td>
+                {% if user_logged_in and user_logged_in.oikeudet == 0 %}
+                <td><a class="btn btn-success" href="{{base_path}}/kurssi/{{kurssi.id}}/ilmo">Ilmoittaudu</a></td>
+                {% else %}
+                <td></td>
+                {% endif %}
+            {% else %}
+                {% if user_logged_in and user_logged_in.oikeudet == 1 %}
+                    <td>{{kurssi.nimi}}</td>
+                    <td><a class="btn btn-primary" href="{{base_path}}/kurssi/{{kurssi.id}}">Avaa</a></td>
+                    {% if user_logged_in.id == kurssi.kurssivastaava_id %}
+                    <td><a class="btn btn-success" href="{{base_path}}/kurssi/{{kurssi.id}}/julkaise">Julkaise</a></td>
+                    {% else %}
+                    <td></td>
+                    {% endif %}
+                {% endif %}
+            {% endif %}
         </tr>
+        {% endfor %}
+        {% if user_logged_in and user_logged_in.oikeudet == 1 %}
         <tr>
-            <td>Tietokantasovellus</td>
-            <td><button class="btn btn-primary">Avaa</button></td>
-            <td><button class="btn btn-default">Vastaukset arvosteltu</button></td>
+            <form method="post" action="{{base_path}}/kurssi">
+                <td><input type="text" name="nimi" class="form-control" placeholder="Lisää kurssi"></td>
+                <input type="hidden" name="kurssivastaava_id" value="{{user_logged_in.id}}">
+                <input type="hidden" name="aihe_id" value="{{aihe_id}}">
+                <td><button type="submit" class="btn btn-success">Luo</button></td>
+                <td></td>
+            </form>
         </tr>
-        <tr>
-            <td>Tietokantojen perusteet</td>
-            <td><button class="btn btn-primary">Avaa</button></td>
-            <td><button class="btn btn-primary">Vastauksia arvostlematta</button></td>
-        </tr>
-        <tr>
-            <td>Cryptography and you</td>
-            <td><button class="btn btn-primary">Avaa</button></td>
-            <td><button class="btn btn-success">Julkaise kurssi</button></td>
-        </tr>
-        <tr>
-            <td><input type="text" class="form-control" placeholder="Uusi kurssi"></td>
-            <td><button class="btn btn-success">Luo</button></td>
-            <td></td>
-        </tr>
-    </tbody>
+        {% endif %}
+</tbody>
 </table>
 {% endblock %}
