--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,15 +3,15 @@
 <h1>Briiffi</h1>
 <h2>Kirjaudu</h2>
 
-<form>
+<form method="post" action="{{base_path}}/login">
     <div class="form-group">
         <label>Käyttäjätunnus</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" name="kayttajatunnus" value="{{username}}">
     </div>
 
     <div class="form-group">
         <label>Salasana</label>
-        <input type="password" class="form-control">
+        <input type="password" class="form-control" name="salasana">
     </div>
 
     <button type="submit" class="btn btn-primary">Kirjaudu sisään</button>
