--- a/app/views/base.html
+++ b/app/views/base.html
@@ -21,7 +21,6 @@
     </head>
 
     <body>
-
         <nav class="navbar navbar-default" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -37,18 +36,21 @@
 
                 <div class="collapse navbar-collapse" id="navigation">
                     <ul class="nav navbar-nav">
-                        <li><a href="{{base_path}}/aiheet">Aiheet</a></li>
+                        <li><a href="{{base_path}}/kurssit/1">TKT kurssit</a></li>
                     </ul>
                     <ul class="nav navbar-nav">
-                        <li><a href="{{base_path}}/kurssit/1">TKT Kurssit</a></li>
+                        <li><a href="{{base_path}}/kurssit/2">Matematiikan kurssit</a></li>
                     </ul>
                     <ul class="nav navbar-nav">
                         <li><a href="{{base_path}}/kurssi/2">Tsoha</a></li>
                     </ul>
                     {% if user_logged_in %}
                     <ul class="nav navbar-nav navbar-right">
-                        <li><p>Tervetuloa, {{user_logged_in.nimi}}</p></li>
+                        <li><a href="{{base_path}}/kayttaja">Tervetuloa, {{user_logged_in.nimi}}</a></li>
                     </ul>
+                    <form class="navbar-form navbar-right" method="post" action="{{base_path}}/logout">
+                        <button type="submit" class="btn btn-default">Kirjaudu ulos</button>
+                    </form>
                     {% else %}
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="{{base_path}}/">Kirjaudu sisään</a></li>
