--- a/app/views/kurssilista_kv.html
+++ b/app/views/kurssilista_kv.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Briiffi</h1>
-<h2>Kurssit</h2>
 
 {% if message %}
 <div class="alert alert-info">
@@ -20,25 +19,33 @@
 {% endif %}
 
 <table class="table table-bordered table-striped">
+    <thead>
+        <tr><td>Kurssit</td><td></td><td></td></tr>
+    </thead>
     <tbody>
         {% for kurssi in kurssit %}
         <tr>
             {% if kurssi.julkaistu %}
             <td>{{kurssi.nimi}}</td>
             <td><a class="btn btn-primary" href="{{base_path}}/kurssi/{{kurssi.id}}">Avaa</a></td>
-            {% if user_logged_in and user_logged_in.oikeudet == 0 %}
-            <td><a class="btn btn-success" href="{{base_path}}/kurssi/{{kurssi.id}}/ilmo">Ilmoittaudu</a></td>
-            {% else %}
-            <td></td>
-            {% endif %}
-            {% else %}
-            {% if user_logged_in and user_logged_in.oikeudet == 1 %}
-            <td>{{kurssi.nimi}}</td>
-            <td><a class="btn btn-primary" href="{{base_path}}/kurssi/{{kurssi.id}}">Avaa</a></td>
-            {% if user_logged_in.id == kurssi.kurssivastaava_id %}
+            {% if user_logged_in and user_logged_in.oikeudet == 0%}
+    <form method="post" action="{{base_path}}/ilmo">
+        <input type="hidden" name="kurssi_id" value="{{kurssi.id}}">
+        <td>
+            <button type="submit" class="btn btn-success">Ilmoittaudu</button>
+        </td>
+    </form>
+    {% else %}
+    <td></td>
+    {% endif %}
+    {% else %}
+    {% if user_logged_in and user_logged_in.oikeudet == 1 %}
+    <td>{{kurssi.nimi}}</td>
+    <td><a class="btn btn-primary" href="{{base_path}}/kurssi/{{kurssi.id}}">Avaa</a></td>
+    {% if user_logged_in.id == kurssi.kurssivastaava_id %}
     <form method="post" action="{{base_path}}/julkaise">
         <input type="hidden" name="kurssi_id" value="{{kurssi.id}}">
-        <td><button type="submit" class="btn btn-success">Julkaise</a></td>
+        <td><button type="submit" class="btn btn-success">Julkaise</button></td>
     </form>
     {% else %}
     <td></td>
@@ -60,4 +67,5 @@
 {% endif %}
 </tbody>
 </table>
+<a class="btn btn-default" href="{{base_path}}/aiheet">Aiheet</a>
 {% endblock %}
