--- a/app/views/oppitunti_uusi.html
+++ b/app/views/oppitunti_uusi.html
@@ -7,7 +7,7 @@
 <h2>Lisää tehtäväsarja kurssille {{kurssi.nimi}}</h2>
 {% endif %}
 
-<form method="post" action="{{base_path}}/uusi">
+<form method="post" action="{{base_path}}/uusi_oppitunti">
     <div class="form-group">
         <label>Otsikko</label>
         <input type="text" name="otsikko" class="form-control">
