--- a/app/views/kurssilista_kv.html
+++ b/app/views/kurssilista_kv.html
@@ -20,52 +20,70 @@
 
 <table class="table table-bordered table-striped">
     <thead>
-        <tr><td>Kurssit</td><td></td><td></td></tr>
+        <tr><td>Kurssit</td><td></td><td></td><td>Lisäys pvm</td></tr>
     </thead>
     <tbody>
         {% for kurssi in kurssit %}
-        <tr>
-            {% if kurssi.julkaistu %}
+            <tr>
             <td>{{kurssi.nimi}}</td>
             <td><a class="btn btn-primary" href="{{base_path}}/kurssi/{{kurssi.id}}">Avaa</a></td>
-            {% if user_logged_in and user_logged_in.oikeudet == 0%}
-    <form method="post" action="{{base_path}}/ilmo">
-        <input type="hidden" name="kurssi_id" value="{{kurssi.id}}">
-        <td>
-            <button type="submit" class="btn btn-success">Ilmoittaudu</button>
-        </td>
-    </form>
-    {% else %}
-    <td></td>
-    {% endif %}
-    {% else %}
-    {% if user_logged_in and user_logged_in.oikeudet == 1 %}
-    <td>{{kurssi.nimi}}</td>
-    <td><a class="btn btn-primary" href="{{base_path}}/kurssi/{{kurssi.id}}">Avaa</a></td>
-    {% if user_logged_in.id == kurssi.kurssivastaava_id %}
-    <form method="post" action="{{base_path}}/julkaise">
-        <input type="hidden" name="kurssi_id" value="{{kurssi.id}}">
-        <td><button type="submit" class="btn btn-success">Julkaise</button></td>
-    </form>
-    {% else %}
-    <td></td>
-    {% endif %}
-    {% endif %}
-    {% endif %}
-</tr>
-{% endfor %}
-{% if user_logged_in and user_logged_in.oikeudet == 1 %}
-<tr>
-<form method="post" action="{{base_path}}/kurssi">
-    <td><input type="text" name="nimi" class="form-control" placeholder="Lisää kurssi"></td>
-    <input type="hidden" name="kurssivastaava_id" value="{{user_logged_in.id}}">
-    <input type="hidden" name="aihe_id" value="{{aihe_id}}">
-    <td><button type="submit" class="btn btn-success">Luo</button></td>
-    <td></td>
-</form>
-</tr>
-{% endif %}
-</tbody>
+            {% if user_logged_in and user_logged_in.oikeudet == 1 %}
+                {% if user_logged_in.id == kurssi.kurssivastaava_id %}
+                    {% if kurssi.julkaistu %}
+                    <form method="post" action="{{base_path}}/piillota">
+                        <input type="hidden" name="kurssi_id" value="{{kurssi.id}}">
+                        <td><button type="submit" class="btn btn-danger">Sulje ilmoittautuminen kursille</button></td>
+                    </form>
+                    {% else %}
+                    <form method="post" action="{{base_path}}/julkaise">
+                        <input type="hidden" name="kurssi_id" value="{{kurssi.id}}">
+                        <td><button type="submit" class="btn btn-success">Avaa ilmoittautuminen kursille</button></td>
+                    </form>
+                    {% endif %}
+                {% else %}
+                <td></td>
+                {% endif %}
+            {% else %}
+                {% if user_logged_in %}
+                    {% if kurssi.id in ilmoittautumiset %}
+                    <form method="post" action="{{base_path}}/peru_ilmo" class="destroy-form" data-confirm="Oletko varma, että haluat poistaa ilmoittautumisen?">
+                        <input type="hidden" name="kurssi_id" value="{{kurssi.id}}">
+                        <td>
+                            <button type="submit" class="btn btn-danger">Peru ilmoittautuminen</button>
+                        </td>
+                    </form>
+                    {% else %}
+                        {% if kurssi.julkaistu %}
+                        <form method="post" action="{{base_path}}/ilmo">
+                            <input type="hidden" name="kurssi_id" value="{{kurssi.id}}">
+                            <td>
+                                <button type="submit" class="btn btn-success">Ilmoittaudu</button>
+                            </td>
+                        </form>
+                        {% else %}
+                        <td>Kurssille ei voi ilmoittautua</td>
+                        {% endif %}
+                    {% endif %}
+                {% else %}
+                <td></td>
+                {% endif %}
+            {% endif %}
+            <td>{{kurssi.lisays_pvm}}</td>
+            </tr>
+        {% endfor %}
+        {% if user_logged_in and user_logged_in.oikeudet == 1 %}
+        <tr>
+            <form method="post" action="{{base_path}}/kurssi">
+                <td><input type="text" name="nimi" class="form-control" placeholder="Lisää kurssi"></td>
+                <input type="hidden" name="kurssivastaava_id" value="{{user_logged_in.id}}">
+                <input type="hidden" name="aihe_id" value="{{aihe_id}}">
+                <td><button type="submit" class="btn btn-success">Luo</button></td>
+                <td></td>
+                <td></td>
+            </form>
+        </tr>
+        {% endif %}
+    </tbody>
 </table>
 <a class="btn btn-default" href="{{base_path}}/aiheet">Aiheet</a>
 {% endblock %}
