--- a/app/views/login.html
+++ b/app/views/login.html
@@ -9,6 +9,12 @@
 </div>
 {% endif %}
 
+{% if error %}
+<div class="alert alert-danger">
+    {{error}}
+</div>
+{% endif %}
+
 <form method="post" action="{{base_path}}/login">
     <div class="form-group">
         <label>Käyttäjätunnus</label>
