--- a/app/views/oppitunti.html
+++ b/app/views/oppitunti.html
@@ -27,14 +27,16 @@
 {% if tehtavat %}
 {% for tehtava in tehtavat %}
 <section>
-    <h4>{{tehtava.tehtavanumero}}. </h4><i>{{tehtava.tehtavananto}}</i><br><br>
     {% if user_logged_in and user_logged_in.id == kurssi.kurssivastaava_id %}
     <form method="post" action="{{base_path}}/muokkaa_tehtava">
         <input type="hidden" name="sarja_id" value="{{oppitunti.id}}">
         <input type="hidden" name="id" value="{{tehtava.id}}">
-        <button type="submit" class="btn btn-default">Muokkaa tehtävää</button>
+        <button type="submit" class="btn btn-default">Muokkaa tehtävää {{tehtava.tehtavanumero}}.</button>
     </form>
+    {% else %}
+    <h4>{{tehtava.tehtavanumero}}. </h4>
     {% endif %}
+    <i>{{tehtava.tehtavananto}}</i><br><br>
 </section>
 {% endfor %}
 {% endif %}
