--- a/app/views/oppitunti_uusi.html
+++ b/app/views/oppitunti_uusi.html
@@ -1,5 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
+
+{% if message %}
+<div class="alert alert-info">
+    {{message}}
+</div>
+{% endif %}
+
+{% if errors %}
+<div class="alert alert-danger">
+    <ul>
+        {% for error in errors %}
+        <li>{{error}}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
+
 <h1>Briiffi</h1>
 {% if tyyppi==0 %}
 <h2>Lisää oppitunti kurssille {{kurssi.nimi}}</h2>
@@ -19,7 +36,7 @@
         {% else %}
         <label>Aliotsikko/Yhteenveto</label>
         {% endif %}
-        <textarea name="materiaali" class="form-control"></textarea>
+        <textarea name="materiaali" class="form-control">{{materiaali}}</textarea>
     </div>
 
     <input type="hidden" name="kurssi_id" value="{{kurssi.id}}">
